--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,9 @@ body {
     text-wrap: balance;
   }
 }
+.sidebar {
+  z-index: -100;
+  -webkit-animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  transition: transform 100ms ease 0s;
+}
