--- a/app/homePage/swiper.module.css
+++ b/app/homePage/swiper.module.css
@@ -1,16 +1,16 @@
 
 
-.swiper {
+/* .swiper {
   width: 100%;
   height: 100%;
-}
+} */
 
-.swiper-slide {
+/* .swiper-slide {
   text-align: center;
   font-size: 18px;
   background: #fff;
 
-  /* Center slide text vertically */
+
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -23,12 +23,12 @@
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
-}
+} */
 
-.swiper-slide img {
+/* .swiper-slide img {
   display: block;
   width: 100%;
-  height: 100%;}
+  height: 100%;} */
 
   .imageBox {
     border-radius: 8px;
@@ -52,7 +52,7 @@
     height: 268px;
   }
   
-  .imageBox img {
+  /* .imageBox img {
     position: absolute;
     top: 0;
     left: 0;
@@ -69,12 +69,8 @@
 
   .recommended-products-section .imageBox {
     height: 100px;
-  }
-
-  /* @media (max-width: 1365px) {
-    .imageBox {
-      height: 120px;
-    }
   } */
+
+
   
  
